Update spacing issue

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -39,11 +39,18 @@ body {
 main {
     @include display(column);
     min-height: 90vh;
+    justify-content: center;
+    align-items: center;
+}
+
+.card {
+    @include display(column);
     text-align: center;
     gap: 1.5rem;
     background-color: white;
     border-radius: 5%;
     max-width: 327px;
+    padding-bottom: 1rem;
 }
 
 .hero {
@@ -90,7 +97,7 @@ p.subtext {
         margin-left: 0.25rem;
         text-align: left;
 
-        h3 {
+        h2 {
             font-weight: 900;
             font-size: 14px;
             margin-bottom: 0.25rem;
